[gd_scene load_steps=10 format=3 uid="uid://dba1gtffrvamm"]

[ext_resource type="Script" path="res://scripts/bed.gd" id="1_5hssx"]
[ext_resource type="Script" path="res://scripts/house_interior.gd" id="1_mmlya"]
[ext_resource type="Script" path="res://scripts/sleep.gd" id="3_3w2cd"]
[ext_resource type="Script" path="res://scripts/button.gd" id="3_or7t4"]
[ext_resource type="Script" path="res://scripts/house_time_manager.gd" id="6_bhm71"]
[ext_resource type="Texture2D" uid="uid://bpoqlswt8f5g0" path="res://16x16/Sprites/House_Interior.png" id="6_caa7o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d5qar"]
atlas = ExtResource("6_caa7o")
region = Rect2(0, 0, 3871, 3871)

[sub_resource type="SpriteFrames" id="SpriteFrames_2vlml"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5qar")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ij2w6"]
size = Vector2(1857, 986.5)

[node name="house_interior" type="Node2D"]
script = ExtResource("1_mmlya")

[node name="Button" type="Button" parent="."]
offset_left = 261.0
offset_top = 291.0
offset_right = 398.0
offset_bottom = 356.0
text = "EXIT"
script = ExtResource("3_or7t4")

[node name="TimeManager" type="Node2D" parent="."]
script = ExtResource("6_bhm71")

[node name="Label" type="Label" parent="TimeManager"]
offset_left = 322.0
offset_top = 354.0
offset_right = 705.0
offset_bottom = 426.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2vlml")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-19, -6)
zoom = Vector2(0.5, 0.3)

[node name="bed" type="Area2D" parent="."]
script = ExtResource("1_5hssx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bed"]
position = Vector2(-474.5, 511.75)
shape = SubResource("RectangleShape2D_ij2w6")

[node name="Label" type="Label" parent="bed"]
offset_left = -367.0
offset_top = -29.0
offset_right = -47.0
offset_bottom = 43.0
scale = Vector2(2, 2)
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Sleep" type="Button" parent="bed"]
offset_left = -378.0
offset_top = 148.0
offset_right = -187.0
offset_bottom = 221.0
text = "Yes"
script = ExtResource("3_3w2cd")

[node name="Don\'t_Sleep" type="Button" parent="bed"]
offset_left = 29.0
offset_top = 154.0
offset_right = 251.0
offset_bottom = 227.0
text = "No
"

[connection signal="button_down" from="Button" to="bed" method="_on_button_button_down"]
[connection signal="input_event" from="bed" to="bed" method="_on_input_event"]
[connection signal="button_down" from="bed/Sleep" to="bed" method="_on_sleep_button_down"]
